--- a/Week 05 - Authentication, Authorization/Module 19 - Simple Project - III/marketing_project/templates/base.html
+++ b/Week 05 - Authentication, Authorization/Module 19 - Simple Project - III/marketing_project/templates/base.html
@@ -1,79 +1,115 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Marketing Project</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
   </head>
-  <body >
+  <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="{% url 'homepage' %}">
-                {% load static %}
-                <img src=" {% static 'logo.jpg' %} " style="width: 120px">
-              </a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{% url 'homepage' %}">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href=" {% url 'add_location' %} ">Add Location</a>
-                  </li>
-             
-                  <li class="nav-item">
-                    <a class="nav-link" href="{% url 'add_diagnostic_center' %}">Add D.Center</a>
-                  </li>
-                  {% if request.user.is_authenticated %}
-                    <li class="nav-item">
-                      <a class="nav-link" href="{% url 'add_investigations' %}">Add Investigation</a>
-                    </li>
-                  {% endif %}
-                </ul>
+            {% load static %}
+            <img src=" {% static 'logo.jpg' %} " style="width: 120px" />
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="{% url 'homepage' %}"
+                  >Home</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href=" {% url 'add_location' %} "
+                  >Add Location</a
+                >
+              </li>
 
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'add_diagnostic_center' %}"
+                  >Add D.Center</a
+                >
+              </li>
+              {% if request.user.is_authenticated %}
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'add_investigations' %}"
+                  >Add Investigation</a
+                >
+              </li>
+              {% endif %}
+            </ul>
 
-                <div class="d-flex"  >
-                  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    {% if request.user.is_authenticated %}
-                      <li class="nav-item">
-                        <a class=" btn btn-info mx-1 " href="{% url 'profile' %}">Profile</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class=" btn btn-danger   " href="{% url 'user_logout' %}">Logout</a>
-                      </li>
-                    
-                    {% else %}
-                      <li class="nav-item">
-                        <a class=" btn btn-secondary mx-1 " href="{% url 'register' %}">Register</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class=" btn btn-primary   " href="{% url 'user_login' %}">Login</a>
-                      </li>
-                    {% endif %}
-                  </ul>
-                </div>
-              </div>
+            <div class="d-flex">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                {% if request.user.is_authenticated %}
+                <li class="nav-item">
+                  <a class="btn btn-info mx-1" href="{% url 'profile' %}"
+                    >Profile</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <form method="post" action="{% url 'user_logout' %}">
+                    {% csrf_token %}
+                    <button type="submit" class="btn btn-danger">Logout</button>
+                  </form>
+                </li>
+
+                {% else %}
+                <li class="nav-item">
+                  <a class="btn btn-secondary mx-1" href="{% url 'register' %}"
+                    >Register</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="btn btn-primary" href="{% url 'user_login' %}"
+                    >Login</a
+                  >
+                </li>
+                {% endif %}
+              </ul>
             </div>
-          </nav>
+          </div>
+        </div>
+      </nav>
     </header>
 
-     
-      {% for i in messages %}
-      <div class="alert alert-warning alert-dismissible fade show" role="alert">
-        <strong  > {{ i }} </strong> 
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-      </div>      
-      {% endfor %}
- 
-    
-    {% block content %} {% endblock content %} 
+    {% for i in messages %}
+    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+      <strong> {{ i }} </strong>
+      <button
+        type="button"
+        class="btn-close"
+        data-bs-dismiss="alert"
+        aria-label="Close"
+      ></button>
+    </div>
+    {% endfor %} {% block content %} {% endblock content %}
 
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
