FH: Module 19.5 Done

--- a/Week 05 - Authentication, Authorization/Module 19 - Simple Project - III/marketing_project/investigations/templates/add_investigations.html
+++ b/Week 05 - Authentication, Authorization/Module 19 - Simple Project - III/marketing_project/investigations/templates/add_investigations.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-<form method="POST" class="w-50 m-auto my-5" >
+<form method="POST" class="w-50 m-auto my-5" enctype="multipart/form-data" >
     <h1>Add Investigation</h1>
 
     {% csrf_token %}
