--- a/Week 05 - Authentication, Authorization/Module 19 - Simple Project - III/marketing_project/templates/base.html
+++ b/Week 05 - Authentication, Authorization/Module 19 - Simple Project - III/marketing_project/templates/base.html
@@ -104,7 +104,9 @@
         aria-label="Close"
       ></button>
     </div>
-    {% endfor %} {% block content %} {% endblock content %}
+    {% endfor %} 
+    
+    {% block content %} {% endblock content %}
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
