--- a/Week 05 - Authentication, Authorization/Module 19 - Simple Project - III/project_9/first_app/templates/delete_cookie.html
+++ b/Week 05 - Authentication, Authorization/Module 19 - Simple Project - III/project_9/first_app/templates/delete_cookie.html
@@ -7,9 +7,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <h1>Delte cookie page</h1>
     
-    <h1>Cookie is setting!</h1> 
+    <h1>Cookie is deleting......</h1> 
 
 
 
