--- a/Week 05 - Authentication, Authorization/Module 19 - Simple Project - III/project_9/first_app/templates/get_session.html
+++ b/Week 05 - Authentication, Authorization/Module 19 - Simple Project - III/project_9/first_app/templates/get_session.html
@@ -7,10 +7,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <h1>Get Session page</h1>
     
-    <h1>Cookie is setting!</h1> 
+    <h1>Session is getting......</h1>
 
+    {% for value in data %}
+        <p> {{ value.name }} </p>
+        <p> {{ age }} </p>
+    {% endfor %}
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
