--- a/Week 05 - Authentication, Authorization/Module 19.5 - Musician Directory Project-II/musicians_directory/templates/index.html
+++ b/Week 05 - Authentication, Authorization/Module 19.5 - Musician Directory Project-II/musicians_directory/templates/index.html
@@ -17,7 +17,9 @@
                 <th scope="col">Instrument Type</th>
                 <th scope="col">Album Name</th>
                 <th scope="col">Release Date</th>
-                <th scope="col">Actions</th>
+                {% if request.user.is_authenticated %}
+                    <th scope="col">Actions</th>
+                {% endif %}
               </tr>
             </thead>
             <tbody>
@@ -31,10 +33,13 @@
                         <td> {{ i.musician.instrument_type }} </td>
                         <td> {{ i.album_name }} </td>
                         <td> {{ i.album_release_date }} </td>
-                        <td> 
-                            <a href="{% url 'edit_Album' i.pk %}" class="text-black fw-bold btn btn-warning">Edit</a>
-                            <a href="{% url 'delete_Musician' i.musician.id %}" class="text-white fw-bold btn btn-danger">Delete</a>
-                        </td>
+
+                        {% if request.user.is_authenticated %}
+                            <td> 
+                                <a href="{% url 'edit_Album' i.pk %}" class="text-black fw-bold btn btn-warning">Edit</a>
+                                <a href="{% url 'delete_Musician' i.musician.id %}" class="text-white fw-bold btn btn-danger">Delete</a>
+                            </td>
+                        {% endif %}
                     </tr>
                 {% endfor %}
 
