--- a/Week 05 - Authentication, Authorization/Module 20 - Mid Term/epicrides/templates/base.html
+++ b/Week 05 - Authentication, Authorization/Module 20 - Mid Term/epicrides/templates/base.html
@@ -10,10 +10,10 @@
   </head>
   <body>
     
-    <nav class="navbar navbar-expand-lg"  >
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">
-            <img width="60" src=" {% static 'EpicRides logo.png' %} " > 
+    <nav class="navbar navbar-expand-lg bg-body-tertiary"  >
+        <div class="container">
+          <a class="navbar-brand" href="{% url 'home' %}">
+            <img width="60" src=" {% static 'epicrides.png' %} " > 
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -21,7 +21,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link fw-bold" aria-current="page" href="#">EpicRides</a>
+                <a class="nav-link fw-bold" aria-current="page" href=" {% url 'home' %} ">EpicRides</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link " aria-current="page" href="#">Add Car Brand</a>
@@ -30,29 +30,52 @@
                 <a class="nav-link " aria-current="page" href="#">Add Car Details</a>
               </li>
             </ul>
-            <div class="d-flex">                       
-                <button class="btn btn-secondary mx-1"  ><a class="dropdown-item" href="#">Sign up</a></button>
-                <button class="btn btn-success mx-1"  ><a class="dropdown-item" href="#">Sign in</a></button> 
+            <div class="d-flex">    
+              {% if request.user.is_authenticated %}
                 <div class=" mx-1 dropdown">
                     <a class="btn btn-warning dropdown-toggle"  role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        User Name
+                        {{ user }}
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Profile</a></li>
+                      <li><a class="dropdown-item" href=" {% url 'profile' %} ">Profile</a></li>
                       <li><a class="dropdown-item" href="#">Update Profile</a></li>
                       <li><hr class="dropdown-divider"></li>
                       <li><a class="dropdown-item" href="#">Change Password</a></li>
                     </ul>
                 </div>
-                <button class="btn btn-danger mx-1"  ><a class="dropdown-item" href="#">Sign out</a></button>
+                <form method="post" action=" {% url 'signout' %} ">
+                  {% csrf_token %}
+                <button class="btn btn-danger mx-1" type="submit" ><a class="dropdown-item">Sign out</a></button>
+                </form>
+              {% else %}
+              <button class="btn btn-secondary mx-1"  ><a class="dropdown-item" href=" {% url 'signup' %} ">Sign up</a></button>
+              <button class="btn btn-success mx-1"  ><a class="dropdown-item" href=" {% url 'signin' %} ">Sign in</a></button> 
+              {% endif %}                   
             </div>
           </div>
         </div>
     </nav>
 
-    {% block content %}    {% endblock content %}
+    {% for i in messages  %}
+      <div class="alert alert-warning alert-dismissible fade show" role="alert">
+        <strong> {{ i }} </strong> 
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+      </div>
+    {% endfor %}
 
+    <div class="container">
+      {% block content %}    {% endblock content %}
+    </div>
 
+    <footer class="">
+      <nav class="navbar bg-body-tertiary">
+        <div class="container">
+          <h6 class="navbar-text w-100 text-center ">
+            All rights reserved to @EpicRides
+          </h6>
+        </div>
+      </nav>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
