--- a/Week 05 - Authentication, Authorization/Module 20 - Mid Term/epicrides/templates/index.html
+++ b/Week 05 - Authentication, Authorization/Module 20 - Mid Term/epicrides/templates/index.html
@@ -3,9 +3,41 @@
 
 {% block content %}
 
-<div class="alert alert-success" role="alert">
-    <a href="#" class="alert-link">Index Page</a>
-    
-</div>
+<div class="row">
+    <h2 class="my-5"> Welcome to Epic Rides! </h2>
+    <div class="col-6"> 
+        <p class=""> 
+            Discover the ride of your dreams with us. Whether you’re looking for speed, luxury, or reliability, Epic Rides has the perfect car for you. Explore our extensive selection and find your next adventure on wheels.
+            <br> <br> <br>
+            At Epic Rides, we believe every journey should be epic. From the latest models to timeless classics, our selection is tailored to suit every taste and budget. Start your adventure with us and drive away in the car that makes your heart race.
+            <br> <br> <br>
+            At Epic Rides, we don't just sell cars; we help you create unforgettable memories. Our dedicated team is here to guide you through every step, ensuring you find the perfect vehicle that matches your lifestyle. Experience the thrill of the ride with Epic Rides today.
+        </p> 
+    </div>
+    <div class="col-6"> 
+        <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner" style="max-height: 300px">
+              <div class="carousel-item active">
+                <img src=" {% static 'factory.jfif' %} " class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src=" {% static 'factory1.jfif' %} " class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src=" {% static 'factory2.jpg' %} " class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src=" {% static 'factory4.jpg' %} " class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src=" {% static 'factory5.avif' %} " class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src=" {% static 'factory3.webp' %} " class="d-block w-100" alt="...">
+              </div>
+            </div>
+          </div>    
+    </div>
+</div> 
 
 {% endblock content %}
