FH: Module 20 edit_profile

--- a/Week 05 - Authentication, Authorization/Module 20 - Mid Term/epicrides/caruser/templates/user_profile.html
+++ b/Week 05 - Authentication, Authorization/Module 20 - Mid Term/epicrides/caruser/templates/user_profile.html
@@ -11,6 +11,6 @@
 {% block content %}
     <div class="row">
         <h2 class="my-5"> Welcome to Epic Rides - {{ request.user }} </h2>
-         
+        {{ form | crispy }}
     </div> 
 {% endblock content %}
