--- a/Week 05 - Authentication, Authorization/Module 19.5 - Musician Directory Project-II/musicians_directory/templates/index.html
+++ b/Week 05 - Authentication, Authorization/Module 19.5 - Musician Directory Project-II/musicians_directory/templates/index.html
@@ -6,7 +6,7 @@
 
 
 {% block content %} 
-    <div class="container p-5">
+    <div class="container py-5">
         <table class="table">
             <thead>
               <tr>
