FH: Module 20 car done

--- a/Week 05 - Authentication, Authorization/Module 20 - Mid Term/epicrides/caruser/templates/user_profile.html
+++ b/Week 05 - Authentication, Authorization/Module 20 - Mid Term/epicrides/caruser/templates/user_profile.html
@@ -15,7 +15,7 @@
     <h2 class="my-5 text-center"> Welcome to Epic Rides  </h2>
     
     {% if pageTitle == 'update' %}  
-        <form class="col-6 m-auto" method="post">
+        <form class="col-6 m-auto border border-primary p-5 rounded" method="post">
             <label class="form-label">Username</label>
             <input class="form-control" value=" {{ request.user }} " disabled >
             <br>
