--- a/Week 05 - Authentication, Authorization/Module 20 - Mid Term/epicrides/templates/base.html
+++ b/Week 05 - Authentication, Authorization/Module 20 - Mid Term/epicrides/templates/base.html
@@ -23,12 +23,17 @@
               <li class="nav-item">
                 <a class="nav-link fw-bold" aria-current="page" href=" {% url 'home' %} ">EpicRides</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link " aria-current="page" href="#">Add Car Brand</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link " aria-current="page" href="#">Add Car Details</a>
-              </li>
+              {% if request.user.is_authenticated %}
+                {% comment %} {% if user == 'admin' %} {% endcomment %}
+                
+                <li class="nav-item">
+                  <a class="nav-link " aria-current="page" href=" {% url 'addCarBrand' %} ">Add Car Brand</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link " aria-current="page" href=" {% url 'addCarDetails' %} ">Add Car Details</a>
+                </li>
+                {% comment %} {% endif %} {% endcomment %}
+              {% endif %}  
             </ul>
             <div class="d-flex">    
               {% if request.user.is_authenticated %}
@@ -40,7 +45,7 @@
                       <li><a class="dropdown-item" href=" {% url 'profile' %} ">Profile</a></li>
                       <li><a class="dropdown-item" href=" {% url 'edit_profile' %} ">Update Profile</a></li>
                       <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Change Password</a></li>
+                      <li><a class="dropdown-item" href=" {% url 'update_pass' %} ">Change Password</a></li>
                     </ul>
                 </div>
                 <form method="post" action=" {% url 'signout' %} ">
