--- a/Week 05 - Authentication, Authorization/Module 20 - Mid Term/epicrides/templates/index.html
+++ b/Week 05 - Authentication, Authorization/Module 20 - Mid Term/epicrides/templates/index.html
@@ -40,4 +40,36 @@
     </div>
 </div> 
 
+<button type="button" class="btn btn-primary mt-5">
+  Total Car Found <span class="badge text-bg-secondary"> {{ car | length }} </span>
+</button>
+<div class="py-5">
+  
+
+ 
+    <a href=" {% url 'home' %} " style="font-size: 18px" class="btn btn-outline-secondary mx-1 "> All </a>
+      {% for i in carBrand %}
+        <a href=" {% url 'brand_wise_cars' i.slug %} " style="font-size: 18px" class="btn btn-outline-secondary mx-1 "> {{ i }} </a>
+      {% endfor %} 
+   
+      <div class="row flex gap-5 p-2 ">
+        {% for c in car %}
+         <div class="card p-0 my-2" style="width: 18rem;">
+          <img src="{{ c.car_img.url }}" class="card-img-top h-75" alt="...">
+          <div class="card-body">
+            <h5 class="card-title"> {{ c.car_name }} </h5>
+            <h6 class="card-title"> {{ c.brand }} </h6>
+            <p class="card-text"> 
+              Price: Starting at <strong>${{ c.price }}</strong> <br>
+              Quantity: <strong>{{ c.quantity }}</strong> <br>
+              {{ c.description | truncatechars:50 }}  
+            </p>
+            <a href=" {% url 'carDetails' c.id %} " class="btn btn-primary">View Details</a>
+          </div>
+        </div>  
+        {% endfor %}
+      </div>
+  </div> 
+</div>
+
 {% endblock content %}
