--- a/Week 05 - Authentication, Authorization/Module 20 - Mid Term/epicrides/car/templates/details.html
+++ b/Week 05 - Authentication, Authorization/Module 20 - Mid Term/epicrides/car/templates/details.html
@@ -16,10 +16,14 @@
               </p>
 
               {% if request.user.is_authenticated %}
-                <a href=" " class="btn btn-primary">Buy Car</a>
+                {% if car.quantity > 0 %}
+                  <a href=" {% url 'placeOrder' car.id %} " class="btn btn-primary">Buy Car</a>
+                {% else %}
+                  <button class="btn btn-danger" disabled>Car is out of stock</button>
+                {% endif %}
               {% endif %}
             </div>
-          </div>           
+        </div>           
     </div>
     
     <div class="col-6 p-5">
