FO: Module 20 Done

--- a/Week 05 - Authentication, Authorization/Module 20 - Mid Term/epicrides/car/templates/add.html
+++ b/Week 05 - Authentication, Authorization/Module 20 - Mid Term/epicrides/car/templates/add.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-<form method="POST" class="w-50 m-auto my-5" enctype="multipart/form-data" >
+<form method="POST" class="w-50 m-auto p-5 rounded border border-primary my-5" enctype="multipart/form-data" >
     <h1>{{ pageTitle }} </h1>
 
     {% csrf_token %}
