--- a/Week 05 - Authentication, Authorization/Module 20 - Mid Term/epicrides/caruser/templates/passchange.html
+++ b/Week 05 - Authentication, Authorization/Module 20 - Mid Term/epicrides/caruser/templates/passchange.html
@@ -3,6 +3,7 @@
 
 
 {% block content %}
+<h2 class="my-5 text-center"> Welcome to Epic Rides  </h2>
 
 <div class="w-50 m-auto my-5 border border-primary p-5 rounded">
 <h2>Password Change Form</h2>
