--- a/Week 05 - Authentication, Authorization/Module 20 - Mid Term/epicrides/templates/base.html
+++ b/Week 05 - Authentication, Authorization/Module 20 - Mid Term/epicrides/templates/base.html
@@ -24,7 +24,7 @@
                 <a class="nav-link fw-bold" aria-current="page" href=" {% url 'home' %} ">EpicRides</a>
               </li>
               {% if request.user.is_authenticated %}
-                {% comment %} {% if user == 'admin' %} {% endcomment %}
+                {% if request.user.is_superuser %}
                 
                 <li class="nav-item">
                   <a class="nav-link " aria-current="page" href=" {% url 'addCarBrand' %} ">Add Car Brand</a>
@@ -32,7 +32,7 @@
                 <li class="nav-item">
                   <a class="nav-link " aria-current="page" href=" {% url 'addCarDetails' %} ">Add Car Details</a>
                 </li>
-                {% comment %} {% endif %} {% endcomment %}
+                {% endif %}
               {% endif %}  
             </ul>
             <div class="d-flex">    
