--- a/Week 06 - Bank Management Project/mamar_bank/accounts/templates/accounts/user_registration.html
+++ b/Week 06 - Bank Management Project/mamar_bank/accounts/templates/accounts/user_registration.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.0.1/dist/tailwind.min.css">
 </head>
 <body>
 
