--- a/Week 06 - Bank Management Project/Module 22.5 - Practice Day 01/mamar_bank/transactions/templates/transactions/transaction_form.html
+++ b/Week 06 - Bank Management Project/Module 22.5 - Practice Day 01/mamar_bank/transactions/templates/transactions/transaction_form.html
@@ -11,7 +11,14 @@
             {% csrf_token %}
 
             <div class="mb-4">
-                <label class="block text-gray-700 text-sm font-bold mb-2" for="amount">
+                {% if title == 'Transfer Money' %}
+                     <label class="block text-gray-700 text-sm font-bold mb-2" for="account_no">
+                        Account No
+                    </label>
+                    <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight border rounded-md border-gray-500 focus:outline-none focus:shadow-outline" name="account_no" id="account_no" type="number" required placeholder="Account No">
+                {% endif %}
+
+                <label class="block text-gray-700 text-sm font-bold my-2" for="amount">
                     Amount
                 </label>
                 <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight border rounded-md border-gray-500 focus:outline-none focus:shadow-outline" name="amount" id="amount" type="number" required placeholder="Amount">
@@ -19,6 +26,11 @@
             {% if form.amount.errors %} {% for error in form.amount.errors %}
             <p class="text-red-600 text-sm italic pb-2">{{ error }}</p>
             {% endfor %} {% endif %}
+
+            {% if form.account_no.errors %} {% for error in form.account_no.errors %}
+            <p class="text-red-600 text-sm italic pb-2">{{ error }}</p>
+            {% endfor %} {% endif %}
+            
             <div class="flex w-full justify-center">
                 <button class="bg-blue-900 text-white hover:text-blue-900 hover:bg-white border border-blue-900 font-bold px-4 py-2 rounded-lg" type="submit">
                 Submit
