--- a/Week 06 - Bank Management Project/Module 24 - Assignment 05/lms_project/books/templates/books/books_details.html
+++ b/Week 06 - Bank Management Project/Module 24 - Assignment 05/lms_project/books/templates/books/books_details.html
@@ -1,15 +1,38 @@
+{% extends 'base.html' %} 
+{% block head_title %} - Book Details {% endblock %} 
 
-<div class="card lg:card-side bg-base-100 shadow-xl">
-    <figure>
-      <img
-        src="https://img.daisyui.com/images/stock/photo-1494232410401-ad00d5433cfa.webp"
-        alt="Album" />
-    </figure>
-    <div class="card-body">
-      <h2 class="card-title">New album is released!</h2>
-      <p>Click the button to listen on Spotiwhy app.</p>
-      <div class="card-actions justify-end">
-        <button class="btn btn-primary">Listen</button>
+
+{% block content %} 
+
+
+<div class="flex shadow-md  mt-10 flex-col items-center bg-white border border-gray-200 rounded-lg shadow md:flex-row   hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-800 dark:hover:bg-gray-700">
+  <img class="object-cover w-full rounded-l-lg h-96 md:h-auto md:w-48 md:rounded-none  " src="{{ book.book_img.url }}" alt="">
+  <div class="flex flex-col justify-between p-4 leading-normal">
+      <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">{{ book.book_name }}</h5>
+      <p class="mb-3 font-normal text-gray-700 dark:text-gray-400 ">Category: <span class="font-bold">  {{ book.category }} </span></p>
+      <p class="mb-3 font-normal text-gray-700 dark:text-gray-400"> {{ book.description }} </p>
+
+      <div class="flex justify-between">
+        <div class="flex gap-6">
+          <p> <span> Price: </span> <span class="font-bold">  {{ book.price }} Taka </span> </p>
+          <p> <span> Quantity: </span> <span class="font-bold"> {{ book.quantity }} </span> </p>
+        </div>
+         
+        {% if request.user.is_authenticated and not request.user.is_superuser %}
+          {% if book.quantity > 0 %}
+            <a href=" {% url 'borrowBook' book.id %} "  type="button" class="text-white bg-gray-800 hover:bg-gray-900 
+            focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium 
+            rounded-lg text-sm px-5 py-1 me-2 mb-2 
+            dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700">Borrow Book</a>
+          {% else %}
+            <button class="btn btn-danger" disabled>Book is out of stock</button>
+          {% endif %}
+        {% endif %}
       </div>
-    </div>
   </div>
+</div>
+
+ 
+
+
+{% endblock %}
