--- a/Week 06 - Bank Management Project/Module 24 - Assignment 05/lms_project/core/templates/index.html
+++ b/Week 06 - Bank Management Project/Module 24 - Assignment 05/lms_project/core/templates/index.html
@@ -45,7 +45,7 @@
   <div class="py-5">
         <div class="row flex flex-wrap justify-center gap-5 p-2 ">
           {% for b in book %}
-           <div class="card shadow-md rounded-md p-5 my-2" style="width: 25rem;">
+           <div class="card bg-indigo-200 shadow-md rounded-md p-5 my-2" style="width: 25rem;">
             <img src="{{ b.book_img.url }}" class="card-img-top" style="height: 150px;">
             <div class="card-body mt-5">
               <h5 class="card-title font-bold"> {{ b.book_name }} </h5>
