--- a/Week 06 - Bank Management Project/Module 24 - Assignment 05/lms_project/core/templates/navbar.html
+++ b/Week 06 - Bank Management Project/Module 24 - Assignment 05/lms_project/core/templates/navbar.html
@@ -15,10 +15,11 @@
                     <a href=" {% url 'addBookCategory' %} " class="block font-bold mt-4 lg:inline-block lg:mt-0 text-indigo-300 hover:text-purple-600 hover:font-black-900 mr-4"> Add Category </a>             
                     <a href=" {% url 'addBookDetails' %} " class="block font-bold mt-4 lg:inline-block lg:mt-0 text-indigo-300 hover:text-purple-600 hover:font-black-900 mr-4"> Add Book </a>             
                 {% else %}
-                <a href=" {% url 'transaction_report' %} " class="block font-bold mt-4 lg:inline-block lg:mt-0 text-indigo-300 hover:text-purple-600 hover:font-black-900 mr-4"> Borrow History </a>
+                <a href=" {% url 'borrowreport' %} " class="block font-bold mt-4 lg:inline-block lg:mt-0 text-indigo-300 hover:text-purple-600 hover:font-black-900 mr-4"> Borrow History </a>
                 <a href=" {% url 'deposit_money' %} " class="block font-bold mt-4 lg:inline-block lg:mt-0 text-indigo-300 hover:text-purple-600 hover:font-black-900 mr-4"> Deposit </a> 
+                <a href=" {% url 'transaction_report' %} " class="block font-bold mt-4 lg:inline-block lg:mt-0 text-indigo-300 hover:text-purple-600 hover:font-black-900 mr-4"> Deposits History </a>
                 {% endif %}
-            </div>
+            </div> 
             <div class="flex w-auto">
                 <div class="text-indigo-300 my-auto font-black px-5">Welcome, {{request.user}}  - {{ request.user.account.balance }} </div>
 
