--- a/Week 06 - Bank Management Project/Module 24 - Assignment 05/lms_project/transactions/templates/transactions/transaction_report.html
+++ b/Week 06 - Bank Management Project/Module 24 - Assignment 05/lms_project/transactions/templates/transactions/transaction_report.html
@@ -69,10 +69,10 @@
           </span>
         </td>
         <td class="px-4 py-2">
-          $ {{ transaction.amount|floatformat:2|intcomma }}
+          {{ transaction.amount|floatformat:2|intcomma }}
         </td>
         <td class="px-4 py-2">
-          $ {{ transaction.balance_after_transaction|floatformat:2|intcomma }}
+          {{ transaction.balance_after_transaction|floatformat:2|intcomma }}
         </td>
       </tr>
       {% endfor %}
