--- a/Week 06 - Bank Management Project/Module 24 - Assignment 05/lms_project/books/templates/books/books_details.html
+++ b/Week 06 - Bank Management Project/Module 24 - Assignment 05/lms_project/books/templates/books/books_details.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %} 
 {% block head_title %} - Book Details {% endblock %} 
+ 
 {% load static %}
 
 {% block content %} 
@@ -8,7 +9,7 @@
 <div class="flex shadow-md  mt-10 flex-col items-center bg-white border border-gray-200 rounded-lg shadow md:flex-row   hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-800 dark:hover:bg-gray-700">
   <img class="object-cover w-full rounded-l-lg h-96 md:h-auto md:w-48 md:rounded-none  " src="{{ book.book_img.url }}" alt="">
   <div class="flex flex-col justify-between p-4 leading-normal">
-      <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">{{ book.book_name }}</h5>
+      <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">{{ book.book_name }} </h5> 
       <p class="mb-3 font-normal text-gray-700 dark:text-gray-400 ">Written By: <span class="font-bold">  {{ book.author_name }} </span></p>
       <p class="mb-3 font-normal text-gray-700 dark:text-gray-400 ">Category: <span class="font-bold">  {{ book.category }} </span></p>
       <p class="mb-3 font-normal text-gray-700 dark:text-gray-400"> {{ book.description }} </p>
@@ -98,8 +99,14 @@
   
   <div class=" md:w-1/2 flex flex-wrap justify-between gap-2 p-4 leading-normal">
     {% for comment in comments %} 
-    <div class="w-full p-5 shadow-md ">        
-      <strong> {{ comment.commented_by }} </strong> <span> {{ comment.created_on }} </span> 
+    <div class="w-full p-5 shadow-md flex flex-col gap-2">    
+      <div class="flex justify-between">
+        <strong> 
+ 
+            {{ comment.commented_by.first_name }} {{ comment.commented_by.last_name }} 
+  
+        </strong> <span> {{ comment.timestamp|date:"F d, Y h:i A" }} </span> 
+      </div>    
       <p> {{ comment.comment }} </p> 
       <p> 
 
