--- a/Week 07 - Hospital Management Frontend/Module 25 - Hospital Management Project Frontened Part - I/style.css
+++ b/Week 07 - Hospital Management Frontend/Module 25 - Hospital Management Project Frontened Part - I/style.css
@@ -1,5 +1,6 @@
 body { 
     margin: auto;
+    background-color: rgb(210, 217, 223);
 }
 
 li {
@@ -47,4 +48,29 @@ nav {
 .service-title {
     font-size: 50px;
     color: rgb(169, 169, 169);
+}
+
+
+
+
+.doc-card {
+    width: 300px;
+    height: 380px;
+    border-radius: 10px;
+    box-shadow: 4px 4px 8px gray;
+    text-align: center;
+    padding: 15px;
+}
+
+.doc-img {
+    width: 75px;
+    height: 75px;
+    border-radius: 50%;
+}
+
+
+#search {
+    padding: 10px;
+    border: none;
+    width: 75%;
 }
